// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SavedArticles renders correctly 1`] = `
<div
  cardStyle="default"
  className="fd-card fd-saved-articles default"
>
  <h3
    className="fd-typography card-h fd-saved-articles-h"
    textStyle="card-h"
  >
    Bewaarde artikelen
  </h3>
  <nav>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/economie-politiek/1288267/trump-vraagt-om-politieke-samenwerking-in-state-of-the-union"
      >
        <time>
          11:18
        </time>
        <span>
          Trump vraagt om politieke samenwerking in State of the Union
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="1"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/economie-politiek/1287621/leraren-slaan-alarm-scholen-stoppen-met-informatica-in-de-bovenbouw"
      >
        <time>
          12:19
        </time>
        <span>
          Leraren slaan alarm: scholen stoppen met informatica in de bovenbouw
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="2"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/achtergrond/1288289/verschillen-tussen-eurolanden-gaan-weer-opspelen"
      >
        <time>
          13:20
        </time>
        <span>
          Verschillen tussen eurolanden gaan weer opspelen 
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="3"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/ondernemen/1288060/ing-boekt-meer-winst-dan-verwacht"
      >
        <time>
          14:21
        </time>
        <span>
          ING boekt meer winst dan verwacht
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="4"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/beurs/1288359/beleggers-reageren-op-cijfers-ing-en-tomtom"
      >
        <time>
          Vandaag
        </time>
        <span>
          ING blinkt uit op hoger Damrak
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="5"
        onClick={[Function]}
      />
    </div>
  </nav>
  <nav
    className="optional-content"
  >
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/opinie/1288043/vertrouwen-van-werknemers-is-kostbaar-goed-dat-menige-werkgever-keer-op-keer-blijft-beschamen"
      >
        <time>
          Gisteren
        </time>
        <span>
          Vertrouwen van werknemers is kostbaar goed dat menige werkgever keer op keer blijft beschamen
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="6"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/achtergrond/1288289/verschillen-tussen-eurolanden-gaan-weer-opspelen"
      >
        <time>
          Eergisteren
        </time>
        <span>
          Verschillen tussen eurolanden gaan weer opspelen
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="7"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/economie-politiek/1288325/politieke-druk-op-vestager-is-onverteerbaar"
      >
        <time>
          Vorige week
        </time>
        <span>
          Politieke druk op Vestager is onverteerbaar
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="8"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/economie-politiek/1287621/leraren-slaan-alarm-scholen-stoppen-met-informatica-in-de-bovenbouw"
      >
        <time>
          Afgelopen maand
        </time>
        <span>
          Leraren slaan alarm: scholen stoppen met informatica in de bovenbouw
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="9"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/opinie/1288142/zorgsector-kan-kunstmatige-intelligentie-veel-slimmer-inzetten"
      >
        <time>
          Vorig jaar
        </time>
        <span>
          Zorgsector kan kunstmatige intelligentie veel slimmer inzetten
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="10"
        onClick={[Function]}
      />
    </div>
  </nav>
  <span
    className="show-less"
    onClick={[Function]}
  >
    <i
      className="icon-chevron-up"
    />
    <div>
      Toon minder
    </div>
  </span>
  <span
    className="show-more"
    onClick={[Function]}
  >
    <div>
      Toon meer
    </div>
    <i
      className="icon-chevron-down"
    />
  </span>
</div>
`;

exports[`SavedArticles renders correctly 2`] = `
<div
  cardStyle="default"
  className="fd-card fd-saved-articles default"
>
  <h3
    className="fd-typography card-h fd-saved-articles-h"
    textStyle="card-h"
  >
    Bewaarde artikelen
  </h3>
  <nav>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/economie-politiek/1288267/trump-vraagt-om-politieke-samenwerking-in-state-of-the-union"
      >
        <time>
          11:18
        </time>
        <span>
          Trump vraagt om politieke samenwerking in State of the Union
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="1"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/economie-politiek/1287621/leraren-slaan-alarm-scholen-stoppen-met-informatica-in-de-bovenbouw"
      >
        <time>
          12:19
        </time>
        <span>
          Leraren slaan alarm: scholen stoppen met informatica in de bovenbouw
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="2"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/achtergrond/1288289/verschillen-tussen-eurolanden-gaan-weer-opspelen"
      >
        <time>
          13:20
        </time>
        <span>
          Verschillen tussen eurolanden gaan weer opspelen 
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="3"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/ondernemen/1288060/ing-boekt-meer-winst-dan-verwacht"
      >
        <time>
          14:21
        </time>
        <span>
          ING boekt meer winst dan verwacht
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="4"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/beurs/1288359/beleggers-reageren-op-cijfers-ing-en-tomtom"
      >
        <time>
          Vandaag
        </time>
        <span>
          ING blinkt uit op hoger Damrak
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="5"
        onClick={[Function]}
      />
    </div>
  </nav>
  <nav
    className="optional-content"
  >
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/opinie/1288043/vertrouwen-van-werknemers-is-kostbaar-goed-dat-menige-werkgever-keer-op-keer-blijft-beschamen"
      >
        <time>
          Gisteren
        </time>
        <span>
          Vertrouwen van werknemers is kostbaar goed dat menige werkgever keer op keer blijft beschamen
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="6"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/achtergrond/1288289/verschillen-tussen-eurolanden-gaan-weer-opspelen"
      >
        <time>
          Eergisteren
        </time>
        <span>
          Verschillen tussen eurolanden gaan weer opspelen
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="7"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/economie-politiek/1288325/politieke-druk-op-vestager-is-onverteerbaar"
      >
        <time>
          Vorige week
        </time>
        <span>
          Politieke druk op Vestager is onverteerbaar
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="8"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/economie-politiek/1287621/leraren-slaan-alarm-scholen-stoppen-met-informatica-in-de-bovenbouw"
      >
        <time>
          Afgelopen maand
        </time>
        <span>
          Leraren slaan alarm: scholen stoppen met informatica in de bovenbouw
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="9"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/opinie/1288142/zorgsector-kan-kunstmatige-intelligentie-veel-slimmer-inzetten"
      >
        <time>
          Vorig jaar
        </time>
        <span>
          Zorgsector kan kunstmatige intelligentie veel slimmer inzetten
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="10"
        onClick={[Function]}
      />
    </div>
  </nav>
  <span
    className="show-less"
    onClick={[Function]}
  >
    <i
      className="icon-chevron-up"
    />
    <div>
      Toon minder
    </div>
  </span>
  <span
    className="show-more"
    onClick={[Function]}
  >
    <div>
      Toon meer
    </div>
    <i
      className="icon-chevron-down"
    />
  </span>
</div>
`;

exports[`SavedArticles renders persoonlijk correctly 1`] = `
<div
  cardStyle="persoonlijk"
  className="fd-card fd-saved-articles persoonlijk"
>
  <h3
    className="fd-typography card-h fd-saved-articles-h"
    textStyle="card-h"
  >
    Bewaarde artikelen
  </h3>
  <nav>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/economie-politiek/1288267/trump-vraagt-om-politieke-samenwerking-in-state-of-the-union"
      >
        <time>
          11:18
        </time>
        <span>
          Trump vraagt om politieke samenwerking in State of the Union
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="1"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/economie-politiek/1287621/leraren-slaan-alarm-scholen-stoppen-met-informatica-in-de-bovenbouw"
      >
        <time>
          12:19
        </time>
        <span>
          Leraren slaan alarm: scholen stoppen met informatica in de bovenbouw
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="2"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/achtergrond/1288289/verschillen-tussen-eurolanden-gaan-weer-opspelen"
      >
        <time>
          13:20
        </time>
        <span>
          Verschillen tussen eurolanden gaan weer opspelen 
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="3"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/ondernemen/1288060/ing-boekt-meer-winst-dan-verwacht"
      >
        <time>
          14:21
        </time>
        <span>
          ING boekt meer winst dan verwacht
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="4"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/beurs/1288359/beleggers-reageren-op-cijfers-ing-en-tomtom"
      >
        <time>
          Vandaag
        </time>
        <span>
          ING blinkt uit op hoger Damrak
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="5"
        onClick={[Function]}
      />
    </div>
  </nav>
  <nav
    className="optional-content"
  >
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/opinie/1288043/vertrouwen-van-werknemers-is-kostbaar-goed-dat-menige-werkgever-keer-op-keer-blijft-beschamen"
      >
        <time>
          Gisteren
        </time>
        <span>
          Vertrouwen van werknemers is kostbaar goed dat menige werkgever keer op keer blijft beschamen
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="6"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/achtergrond/1288289/verschillen-tussen-eurolanden-gaan-weer-opspelen"
      >
        <time>
          Eergisteren
        </time>
        <span>
          Verschillen tussen eurolanden gaan weer opspelen
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="7"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/economie-politiek/1288325/politieke-druk-op-vestager-is-onverteerbaar"
      >
        <time>
          Vorige week
        </time>
        <span>
          Politieke druk op Vestager is onverteerbaar
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="8"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/economie-politiek/1287621/leraren-slaan-alarm-scholen-stoppen-met-informatica-in-de-bovenbouw"
      >
        <time>
          Afgelopen maand
        </time>
        <span>
          Leraren slaan alarm: scholen stoppen met informatica in de bovenbouw
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="9"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/opinie/1288142/zorgsector-kan-kunstmatige-intelligentie-veel-slimmer-inzetten"
      >
        <time>
          Vorig jaar
        </time>
        <span>
          Zorgsector kan kunstmatige intelligentie veel slimmer inzetten
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="10"
        onClick={[Function]}
      />
    </div>
  </nav>
  <span
    className="show-less"
    onClick={[Function]}
  >
    <i
      className="icon-chevron-up"
    />
    <div>
      Toon minder
    </div>
  </span>
  <span
    className="show-more"
    onClick={[Function]}
  >
    <div>
      Toon meer
    </div>
    <i
      className="icon-chevron-down"
    />
  </span>
</div>
`;

exports[`SavedArticles renders persoonlijk correctly 2`] = `
<div
  cardStyle="persoonlijk"
  className="fd-card fd-saved-articles persoonlijk"
>
  <h3
    className="fd-typography card-h fd-saved-articles-h"
    textStyle="card-h"
  >
    Bewaarde artikelen
  </h3>
  <nav>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/economie-politiek/1288267/trump-vraagt-om-politieke-samenwerking-in-state-of-the-union"
      >
        <time>
          11:18
        </time>
        <span>
          Trump vraagt om politieke samenwerking in State of the Union
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="1"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/economie-politiek/1287621/leraren-slaan-alarm-scholen-stoppen-met-informatica-in-de-bovenbouw"
      >
        <time>
          12:19
        </time>
        <span>
          Leraren slaan alarm: scholen stoppen met informatica in de bovenbouw
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="2"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/achtergrond/1288289/verschillen-tussen-eurolanden-gaan-weer-opspelen"
      >
        <time>
          13:20
        </time>
        <span>
          Verschillen tussen eurolanden gaan weer opspelen 
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="3"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/ondernemen/1288060/ing-boekt-meer-winst-dan-verwacht"
      >
        <time>
          14:21
        </time>
        <span>
          ING boekt meer winst dan verwacht
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="4"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/beurs/1288359/beleggers-reageren-op-cijfers-ing-en-tomtom"
      >
        <time>
          Vandaag
        </time>
        <span>
          ING blinkt uit op hoger Damrak
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="5"
        onClick={[Function]}
      />
    </div>
  </nav>
  <nav
    className="optional-content"
  >
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/opinie/1288043/vertrouwen-van-werknemers-is-kostbaar-goed-dat-menige-werkgever-keer-op-keer-blijft-beschamen"
      >
        <time>
          Gisteren
        </time>
        <span>
          Vertrouwen van werknemers is kostbaar goed dat menige werkgever keer op keer blijft beschamen
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="6"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/achtergrond/1288289/verschillen-tussen-eurolanden-gaan-weer-opspelen"
      >
        <time>
          Eergisteren
        </time>
        <span>
          Verschillen tussen eurolanden gaan weer opspelen
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="7"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/economie-politiek/1288325/politieke-druk-op-vestager-is-onverteerbaar"
      >
        <time>
          Vorige week
        </time>
        <span>
          Politieke druk op Vestager is onverteerbaar
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="8"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/economie-politiek/1287621/leraren-slaan-alarm-scholen-stoppen-met-informatica-in-de-bovenbouw"
      >
        <time>
          Afgelopen maand
        </time>
        <span>
          Leraren slaan alarm: scholen stoppen met informatica in de bovenbouw
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="9"
        onClick={[Function]}
      />
    </div>
    <div
      className="news-item"
    >
      <a
        href="https://fd.nl/opinie/1288142/zorgsector-kan-kunstmatige-intelligentie-veel-slimmer-inzetten"
      >
        <time>
          Vorig jaar
        </time>
        <span>
          Zorgsector kan kunstmatige intelligentie veel slimmer inzetten
        </span>
      </a>
      <i
        className="icon-times"
        data-uuid="10"
        onClick={[Function]}
      />
    </div>
  </nav>
  <span
    className="show-less"
    onClick={[Function]}
  >
    <i
      className="icon-chevron-up"
    />
    <div>
      Toon minder
    </div>
  </span>
  <span
    className="show-more"
    onClick={[Function]}
  >
    <div>
      Toon meer
    </div>
    <i
      className="icon-chevron-down"
    />
  </span>
</div>
`;
